# Try

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yaml
src/: CMakeLists.txt  main.cpp
src/types/: Exception.cpp  Exception.hpp
src/utils/: Try.hpp
test/: CMakeLists.txt
test/types/: Exception.test.cpp
test/utils/: Try.test.cpp
